--- a/index.html
+++ b/index.html
@@ -795,74 +795,74 @@
 
                 <div class="recentes">
                     <div class="recentes-item" data-categoria="site" data-categoria-primary>
-                        <img src="logo5.jpg"  width="340" height="235">
+                        <img src="Logo5.jpg"  width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da site</h2>
                         </div>
                     </div>
                     <div class="recentes-item" data-categoria="site">
-                        <img src="logo5.jpg" width="340" height="235">
+                        <img src="Logo5.jpg" width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da site</h2>
                          </div>
                     </div>
                     <div class="recentes-item" data-categoria="site">
-                        <img src="logo5.jpg"  width="340" height="235">
+                        <img src="Logo5.jpg"  width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da site</h2>
                         </div>
                     </div>
                     <div class="recentes-item" data-categoria="site">
-                        <img src="logo5.jpg" width="340" height="235">
+                        <img src="Logo5.jpg" width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da site</h2>
                             </div>
                     </div>
                     <div class="recentes-item" data-categoria="site">
-                        <img src="logo5.jpg"  width="340" height="235">
+                        <img src="Logo5.jpg"  width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da site</h2>
                         </div>
                     </div>
                     <div class="recentes-item" data-categoria="site">
-                        <img src="logo5.jpg" width="340" height="235">
+                        <img src="Logo5.jpg" width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da site</h2>
                             </div>
                     </div>
 
                     <div class="recentes-item" data-categoria="blog" data-categoria-primary>
-                        <img src="logo5.jpg"  width="340" height="235">
+                        <img src="Logo5.jpg"  width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da Blog</h2>
                         </div>
                     </div>
                     <div class="recentes-item" data-categoria="blog">
-                        <img src="logo5.jpg" width="340" height="235">
+                        <img src="Logo5.jpg" width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da Blog</h2>
                             </div>
                     </div>
                     <div class="recentes-item" data-categoria="blog">
-                        <img src="logo5.jpg"  width="340" height="235">
+                        <img src="Logo5.jpg"  width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da Blog</h2>
                         </div>
                     </div>
                     <div class="recentes-item" data-categoria="blog">
-                        <img src="logo5.jpg" width="340" height="235">
+                        <img src="Logo5.jpg" width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da Blog</h2>
                          </div>
                     </div>
                     <div class="recentes-item" data-categoria="blog">
-                        <img src="logo5.jpg"  width="340" height="235">
+                        <img src="Logo5.jpg"  width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da Blog</h2>
                         </div>
                     </div>
                     <div class="recentes-item" data-categoria="blog">
-                        <img src="logo5.jpg" width="340" height="235">
+                        <img src="Logo5.jpg" width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da Blog</h2>
                         </div>
@@ -870,185 +870,185 @@
 
 
                     <div class="recentes-item" data-categoria="ecommerce" data-categoria-primary>
-                        <img src="logo5.jpg"  width="340" height="235">
+                        <img src="Logo5.jpg"  width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da E-Commerce</h2>
                         </div>
                     </div>
                     <div class="recentes-item" data-categoria="ecommerce">
-                        <img src="logo5.jpg" width="340" height="235">
+                        <img src="Logo5.jpg" width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da E-Commerce</h2>
                             </div>
                     </div>
                     <div class="recentes-item" data-categoria="ecommerce">
-                        <img src="logo5.jpg"  width="340" height="235">
+                        <img src="Logo5.jpg"  width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da E-Commerce</h2>
                         </div>
                     </div>
                     <div class="recentes-item" data-categoria="ecommerce">
-                        <img src="logo5.jpg" width="340" height="235">
+                        <img src="Logo5.jpg" width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da E-Commerce</h2>
                             </div>
                     </div>
                     <div class="recentes-item" data-categoria="ecommerce">
-                        <img src="logo5.jpg"  width="340" height="235">
+                        <img src="Logo5.jpg"  width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da E-Commerce</h2>
                         </div>
                     </div>
                     <div class="recentes-item" data-categoria="ecommerce">
-                        <img src="logo5.jpg" width="340" height="235">
+                        <img src="Logo5.jpg" width="340" height="235">
                         <div class="recentes-item-info">
                             <h2 class="recentes-item-title">Titulo da E-Commerce</h2>
                             </div>
                     </div>
 
                     <div class="recentes-item" data-categoria="cartao" data-categoria-primary>
-                            <img src="logo5.jpg"  width="340" height="235">
+                            <img src="Logo5.jpg"  width="340" height="235">
                             <div class="recentes-item-info">
                                 <h2 class="recentes-item-title">Titulo da Cartão de Vista</h2>
                             </div>
                         </div>
                         <div class="recentes-item" data-categoria="cartao">
-                            <img src="logo5.jpg" width="340" height="235">
+                            <img src="Logo5.jpg" width="340" height="235">
                             <div class="recentes-item-info">
                                 <h2 class="recentes-item-title">Titulo da Cartão de Vista</h2>
                                 </div>
                         </div>
                         <div class="recentes-item" data-categoria="cartao">
-                            <img src="logo5.jpg"  width="340" height="235">
+                            <img src="Logo5.jpg"  width="340" height="235">
                             <div class="recentes-item-info">
                                 <h2 class="recentes-item-title">Titulo da Cartão de Vista</h2>
                             </div>
                         </div>
                         <div class="recentes-item" data-categoria="cartao">
-                            <img src="logo5.jpg" width="340" height="235">
+                            <img src="Logo5.jpg" width="340" height="235">
                             <div class="recentes-item-info">
                                 <h2 class="recentes-item-title">Titulo da Cartão de Vista</h2>
                                 </div>
                         </div>
                         <div class="recentes-item" data-categoria="cartao">
-                            <img src="logo5.jpg"  width="340" height="235">
+                            <img src="Logo5.jpg"  width="340" height="235">
                             <div class="recentes-item-info">
                                 <h2 class="recentes-item-title">Titulo da Cartão de Vista</h2>
                             </div>
                         </div>
                         <div class="recentes-item" data-categoria="cartao">
-                            <img src="logo5.jpg" width="340" height="235">
+                            <img src="Logo5.jpg" width="340" height="235">
                             <div class="recentes-item-info">
                                 <h2 class="recentes-item-title">Titulo da Cartão de Vista</h2>
                                 </div>
                         </div>
 
                         <div class="recentes-item" data-categoria="sociais" data-categoria-primary>
-                                <img src="logo5.jpg"  width="340" height="235">
+                                <img src="Logo5.jpg"  width="340" height="235">
                                 <div class="recentes-item-info">
                                     <h2 class="recentes-item-title">Titulo da RedesSociais</h2>
                                 </div>
                             </div>
                             <div class="recentes-item" data-categoria="sociais">
-                                <img src="logo5.jpg" width="340" height="235">
+                                <img src="Logo5.jpg" width="340" height="235">
                                 <div class="recentes-item-info">
                                     <h2 class="recentes-item-title">Titulo da RedesSociais</h2>
                                     </div>
                             </div>
                             <div class="recentes-item" data-categoria="sociais">
-                                <img src="logo5.jpg"  width="340" height="235">
+                                <img src="Logo5.jpg"  width="340" height="235">
                                 <div class="recentes-item-info">
                                     <h2 class="recentes-item-title">Titulo da RedesSociais</h2>
                                 </div>
                             </div>
                             <div class="recentes-item" data-categoria="sociais">
-                                <img src="logo5.jpg" width="340" height="235">
+                                <img src="Logo5.jpg" width="340" height="235">
                                 <div class="recentes-item-info">
                                     <h2 class="recentes-item-title">Titulo da RedesSociais</h2>
                                     </div>
                             </div>
                             <div class="recentes-item" data-categoria="sociais">
-                                <img src="logo5.jpg"  width="340" height="235">
+                                <img src="Logo5.jpg"  width="340" height="235">
                                 <div class="recentes-item-info">
                                     <h2 class="recentes-item-title">Titulo da RedesSociais</h2>
                                 </div>
                             </div>
                             <div class="recentes-item" data-categoria="sociais">
-                                <img src="logo5.jpg" width="340" height="235">
+                                <img src="Logo5.jpg" width="340" height="235">
                                 <div class="recentes-item-info">
                                     <h2 class="recentes-item-title">Titulo da RedesSociais</h2>
                                     </div>
                             </div>
 
                             <div class="recentes-item" data-categoria="logotipo" data-categoria-primary>
-                                    <img src="logo5.jpg"  width="340" height="235">
+                                    <img src="Logo5.jpg"  width="340" height="235">
                                     <div class="recentes-item-info">
                                         <h2 class="recentes-item-title">Titulo da Logotipo</h2>
                                     </div>
                                 </div>
                                 <div class="recentes-item" data-categoria="logotipo">
-                                    <img src="logo5.jpg" width="340" height="235">
+                                    <img src="Logo5.jpg" width="340" height="235">
                                     <div class="recentes-item-info">
                                         <h2 class="recentes-item-title">Titulo da Logotipo</h2>
                                         </div>
                                 </div>
                                 <div class="recentes-item" data-categoria="logotipo">
-                                    <img src="logo5.jpg"  width="340" height="235">
+                                    <img src="Logo5.jpg"  width="340" height="235">
                                     <div class="recentes-item-info">
                                         <h2 class="recentes-item-title">Titulo da Logotipo</h2>
                                     </div>
                                 </div>
                                 <div class="recentes-item" data-categoria="logotipo">
-                                    <img src="logo5.jpg" width="340" height="235">
+                                    <img src="Logo5.jpg" width="340" height="235">
                                     <div class="recentes-item-info">
                                         <h2 class="recentes-item-title">Titulo da Logotipo</h2>
                                         </div>
                                 </div>
                                 <div class="recentes-item" data-categoria="logotipo">
-                                    <img src="logo5.jpg"  width="340" height="235">
+                                    <img src="Logo5.jpg"  width="340" height="235">
                                     <div class="recentes-item-info">
                                         <h2 class="recentes-item-title">Titulo da Logotipo</h2>
                                     </div>
                                 </div>
                                 <div class="recentes-item" data-categoria="logotipo">
-                                    <img src="logo5.jpg" width="340" height="235">
+                                    <img src="Logo5.jpg" width="340" height="235">
                                     <div class="recentes-item-info">
                                         <h2 class="recentes-item-title">Titulo da Logotipo</h2>
                                     </div>
                                 </div>
 
                                 <div class="recentes-item" data-categoria="midia">
-                                        <img src="logo5.jpg"  width="340" height="235">
+                                        <img src="Logo5.jpg"  width="340" height="235">
                                         <div class="recentes-item-info">
                                             <h2 class="recentes-item-title">Titulo da MidiaKit</h2>
                                         </div>
                                     </div>
                                     <div class="recentes-item" data-categoria="midia">
-                                        <img src="logo5.jpg" width="340" height="235">
+                                        <img src="Logo5.jpg" width="340" height="235">
                                         <div class="recentes-item-info">
                                             <h2 class="recentes-item-title">Titulo da MidiaKit</h2>
                                             </div>
                                     </div>
                                     <div class="recentes-item" data-categoria="midia">
-                                        <img src="logo5.jpg"  width="340" height="235">
+                                        <img src="Logo5.jpg"  width="340" height="235">
                                         <div class="recentes-item-info">
                                             <h2 class="recentes-item-title">Titulo da MidiaKit</h2>
                                         </div>
                                     </div>
                                     <div class="recentes-item" data-categoria="midia">
-                                        <img src="logo5.jpg" width="340" height="235">
+                                        <img src="Logo5.jpg" width="340" height="235">
                                         <div class="recentes-item-info">
                                             <h2 class="recentes-item-title">Titulo da MidiaKit</h2>
                                             </div>
                                     </div>
                                     <div class="recentes-item" data-categoria="midia">
-                                        <img src="logo5.jpg"  width="340" height="235">
+                                        <img src="Logo5.jpg"  width="340" height="235">
                                         <div class="recentes-item-info">
                                             <h2 class="recentes-item-title">Titulo da MidiaKit</h2>
                                         </div>
                                     </div>
                                     <div class="recentes-item" data-categoria="midia">
-                                        <img src="logo5.jpg" width="340" height="235">
+                                        <img src="Logo5.jpg" width="340" height="235">
                                         <div class="recentes-item-info">
                                             <h2 class="recentes-item-title">Titulo da MidiaKit</h2>
                                             </div>
