--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
                 <img class="thiago" src="foto-thiago.png">
                 <h1 class="nome">Thiago</h1>
                 <p class="text"> Designer e Financeiro. </p>
-                <a class="btn read-more" href="file:///F:/senac/projeto/projeto/sobre-thiago.html">SAIBA MAIS</a>
+                <a class="btn read-more" href="carolineal.github.io/sobre-thiago.html">SAIBA MAIS</a>
 
             </div>
             </div>
