--- a/sobre-thiago.html
+++ b/sobre-thiago.html
@@ -455,7 +455,7 @@
             <header class="menu">
                     <div class="menu-bar"><a class="menu-ico" href="#" onclick=" return alternarMenu();"><i class="fas fa-bars"></i></a></div>
                     <nav id="menu-itens" class="menu-itens">
-                      <a class="menu-item" data-ancora="a-home" href="file:///F:/senac/projeto/projeto/index.html">Home</a>
+                      <a class="menu-item" data-ancora="a-home" hrefhttp://alphawebdesigner.com/">Home</a>
                       <a class="menu-item" data-ancora="a-quem somos" href="file:///F:/senac/projeto/projeto/sobre-thiago.html">Quem Somos</a>
                       <a class="menu-item" data-ancora="a-servicos" href="file:///F:/senac/projeto/projeto/servi%C3%A7os.html">Serviços</a>
                       <a class="menu-item" data-ancora="a-portfolio" href="#">Portfólio</a>
@@ -561,10 +561,7 @@
             
             
                     <div class="footer-t">2014 - 2018 ©‎ ALPHA DESIGN - TODOS OS DIREITOS RESERVADOS.
-                            <br>
-                            <br>
-                            <br>
-                        AGRADECIMENTOS AO PROFESSOR VINICIOS ( virtualartsa.com.br )</div>
+                          </div>
                     </div>
 
 
