--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
                  <img class="carol" src="foto-perfil.png">
                  <h1 class="nome">Caroline</h1>
                  <p class="text"> Designer e Front-end. </p>
-                 <a class="btn read-more" href="file:///F:/senac/projeto/projeto/sobre-thiago.html">SAIBA MAIS</a>
+                 <a class="btn read-more"carolineal.github.io/sobre-thiago.htmll">SAIBA MAIS</a>
 
             </div>
 
