--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
 <nav id="menu-itens" class="menu-itens">
   <a class="menu-item" data-ancora="a-home" href="#">Home</a>
   <a class="menu-item" data-ancora="a-quem-somos" href="#">Quem Somos</a>
-  <a class="menu-item" data-ancora="a-servicos" href="#">Serviços</a>
+  <a class="menu-item" data-ancora="a-servicos" href="http://alphawebdesigner.com/servi%C3%A7os.html">Serviços</a>
   <a class="menu-item" data-ancora="a-portfolio" href="#">Portfólio</a>
   <a class="menu-item" data-ancora="a-contato" href="#">Contato</a>
 </nav>
@@ -726,7 +726,7 @@
                  <img class="carol" src="foto-perfil.png">
                  <h1 class="nome">Caroline</h1>
                  <p class="text"> Designer e Front-end. </p>
-                 <a class="btn read-more" href="file:///F:/senac/projeto/projeto/sobre-thiago.html">SAIBA MAIS</a>
+                 <a class="btn read-more" href="http://alphawebdesigner.com/sobre-thiago.html">SAIBA MAIS</a>
 
             </div>
 
@@ -734,7 +734,7 @@
                 <img class="thiago" src="foto-thiago.png">
                 <h1 class="nome">Thiago</h1>
                 <p class="text"> Designer e Financeiro. </p>
-                <a class="btn read-more" href="file:///F:/senac/projeto/projeto/sobre-thiago.html">SAIBA MAIS</a>
+                <a class="btn read-more" href="http://alphawebdesigner.com/sobre-thiago.html">SAIBA MAIS</a>
 
             </div>
             </div>
@@ -754,7 +754,7 @@
                     <p class="descricao">Personalização de lojas nas<br>
                         plataformas, Loja2, Iluria,<br>
                         e box shop.</p>
-                        <a class="btn1 read-more" href="file:///F:/senac/projeto/projeto/servi%C3%A7os.html">SAIBA MAIS</a>
+                        <a class="btn1 read-more" href="http://alphawebdesigner.com/servi%C3%A7os.html">SAIBA MAIS</a>
                 </div>
                 <div class="icon">
                     <img src="blogs.png" width="180px" height="185px">
@@ -762,7 +762,7 @@
                         Wordpress, totalmente responsivo<br>
                         desde a indetidade visual até a <br>
                         programação.</p>
-                        <a class="btn1 read-more" href="file:///F:/senac/projeto/projeto/servi%C3%A7os.html">SAIBA MAIS</a>
+                        <a class="btn1 read-more" href="http://alphawebdesigner.com/servi%C3%A7os.html">SAIBA MAIS</a>
                 </div>
                 <div class="icon">
                     <img src="identidade.png" width="180px" height="185px">
@@ -770,13 +770,13 @@
                         para papelaria,identidade visual<br>
                         corporativa,capas para as redes sociais<br>
                         e muito mais.</p>
-                        <a class="btn1 read-more" href="file:///F:/senac/projeto/projeto/servi%C3%A7os.html">SAIBA MAIS</a>
+                        <a class="btn1 read-more" href="http://alphawebdesigner.com/servi%C3%A7os.html">SAIBA MAIS</a>
                 </div>
                 <div class="icon">
                     <img src="sites.png" width="180px" height="185px">
                     <p class="descricao">Criação de sites institucionais na<br>
                         plataforma Wordpress.</p>
-                        <a class="btn1 read-more" href="file:///F:/senac/projeto/projeto/servi%C3%A7os.html">SAIBA MAIS</a>
+                        <a class="btn1 read-more" href="http://alphawebdesigner.com/servi%C3%A7os.html">SAIBA MAIS</a>
                 </div>
 
             </div>
@@ -1077,7 +1077,7 @@
 
         <div class="contato-info">
             <div class="info-text">Dúvidas, orçamentos e outros, entre em contato pelo<br>
-            formulário ou envie um e-mail para CONTATO@ALPHAWEBDESIGNER.COM .</div>
+            formulário ou envie um e-mail para ADMKR!@HOTMAIL>COM .</div>
 
         <div class="icon-contato"><img src="local-1.png">
             <div class="info-text-p">LOCAL:<br>
