--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
             
             
             <div class="formulario">
-                <form class="form"  id="contactForm" name="contat-Form">
+                <form method="POST" action="processa.php" class="form"  id="contactForm" name="contat-Form">
                         <input class="comment-name" id="ContactForm1_contact-form-name" placeholder="Nome* :" required="" type="text">
                         <input id="ContactForm1_contact-form-email" placeholder="E-mail* :" required="" type="email">
                         <textarea class="required comment-text" id="ContactForm1_contact-form-email-message" placeholder="Mensagem* :" required="" type="tel"></textarea>
